force-app/main/default/objects/Service_Detail__c/Service_Detail__c.object-meta.xml
<CustomObject>
    <label>Service Detail</label>
    <nameField>
        <displayFormat>SD-{00000}</displayFormat>
        <label>Service Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>