force-app/main/default/objects/Service_Detail__c/fields/Care_Benefit_Verify_Request__c.field-meta.xml
<CustomField>
    <fullName>Care_Benefit_Verify_Request__c</fullName>
    <label>Care Benefit Verify Request</label>
    <referenceTo>CareBenefitVerifyRequest</referenceTo>
    <relationshipLabel>Service Details</relationshipLabel>
    <relationshipName>Service_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>