force-app/main/default/objects/Service_Detail__c/fields/Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code__c</fullName>
    <label>Diagnosis Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICD-10</fullName>
            </value>
            <value>
                <fullName>ICD-11</fullName>
            </value>
            <value>
                <fullName>ICD-12</fullName>
            </value>
            <value>
                <fullName>ICD-13</fullName>
            </value>
            <value>
                <fullName>ICD-14</fullName>
            </value>
            <value>
                <fullName>ICD-15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>