force-app/main/default/objects/Service_Detail__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <formula>Care_Benefit_Verify_Request__r.PayerId</formula>
    <label>Patient ID</label>
    <type>Text</type>
</CustomField>