force-app/main/default/objects/Service_Detail__c/fields/Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Code__c</fullName>
    <label>Procedure Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>OPT</fullName>
            </value>
            <value>
                <fullName>DPT</fullName>
            </value>
            <value>
                <fullName>ONT</fullName>
            </value>
            <value>
                <fullName>UPT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>