force-app/main/default/objects/Service_Detail__c/validationRules/Service_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Date_Check</fullName>
    <active>true</active>
    <description>Make sure service date is in the future</description>
    <errorConditionFormula>Service_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Service date cannot be in the past.</errorMessage>
</ValidationRule>